Upcoming:
- Fixed the Builder to cope better with 'unplacable' blocks. Everything is better compared to crashing.
- Better tooltips

2.0.2-alpha:
- Michael Hillcox added some protection to the builder to prevent it from crashing in weird situations

2.0.1-alpha:
- Fixed a problem where the shield wasn't decomposed properly if the projector block was broken
- Re-implemented the filter module for the Builder

1.2.12:
- Fixed power bar display in the GUI of the shield
- Fixed cleanup of shapecard previews
- When the shield projector is destroyed by an explosion the shield template blocks will be restored first

1.2.11:
- Updates to latest McJtyLib
- The shield has been ported!

1.2.9:
- Fixed a serious networking problem which could cause 'invalid discriminator spam' on servers

1.2.8:
- Fixed a networking problem on servers

1.2.7:
- Updates to the latest McJtyLib
- Better creative tab icon (uses the builder now instead of dirt)
- The Builder will now use the container int tracking system to communicate the current level

1.2.3:
- Update to latest Forge

1.2.2:
- Update to 1.14.4

1.2.0:
- Depends on McJtyLib 3.5.0!
- Added some crash protection that shouldn't be needed but apparently is

1.1.2:
- Needs McJtyLib 3.1.0
- Support for COFH RF API is removed. Only Forge Energy is supported now
- Various cleanups

1.1.1:
- Fix problem with network packet doing things on the wrong thread
- Fix a lot of console spam if things go wrong and added a bit more diagnostics

1.1.0:
- Made compatible with the latest McJtyLib (3.0.0)
- Bugfix with a rare crash that could occur when switching dimensions

1.1.0alpha:
- Made compatible with the latest McJtyLib (3.0.0)
- Bugfix with a rare crash that could occur when switching dimensions